workshop/deployment/api-springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-springboot-service
spec:
  type: NodePort
  selector:
    app: api-springboot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
